# astro-mcp

./: .gitignore  PRD.md  README.md  pyproject.toml
.github/agents/: astrologer.chatmode.md
scripts/: download_ephe.sh
src/astro_mcp/: __init__.py  __main__.py  config.py  server.py
src/astro_mcp/core/: ephemeris_provider.py  formatters.py  geocoding.py  models.py
src/astro_mcp/tools/: __init__.py  antiscia.py  arabic_parts.py  ephemeris.py  natal.py  planetary_hours.py  profections.py  progressions.py  rectification.py  returns.py  synastry.py  transits.py
tests/: conftest.py  test_arabic_parts.py  test_dst.py  test_ephemeris.py  test_formatters.py  test_natal.py  test_progressions.py  test_returns.py  test_synastry.py  test_transits.py
